check if XML exists to prevent silent fail, and share the code to locate examples folder #106